--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -44,7 +44,7 @@ jobs:
 
     steps:
     - name: Free up disk space
-      uses: jlumbroso/free-disk-space@main
+      uses: P3TERX/ssh2actions@main
       with:
         tool-cache: false
         android: true
